--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <title>국어퀴즈 방탈출 게임</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -16,7 +18,7 @@
 
         <div class="start-screen" id="startScreen">
             <img src="images/logo.png" alt="게임 로고" class="game-logo">
-            <button class="start-btn" onclick="startGame()">START</button>
+            <button class="start-btn" onclick="requestFullScreenAndStart()">START</button>
         </div>
 
         <div class="game-screen" id="gameScreen">
