--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="screen-transition" id="screenTransition">
-            <video class="transition-video" id="transitionVideo" autoplay muted playsinline>
+            <video class="transition-video" id="transitionVideo" autoplay playsinline>
                 <source src="" type="video/mp4">
             </video>
         </div>
@@ -88,3 +88,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
