--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="start-screen" id="startScreen">
             <img src="images/logo.png" alt="게임 로고" class="game-logo">
-            <button class="start-btn" onclick="requestFullScreenAndStart()">START</button>
+            <button class="start-btn" onclick="startGame()">START</button>
         </div>
 
         <div class="game-screen" id="gameScreen">
@@ -88,4 +88,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
