--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <div class="container">
+        <div class="resume-screen" id="resumeScreen">
+            <h2>이어서 플레이하시겠어요?</h2>
+            <p>저장된 진행 상황이 있습니다.</p>
+            <button class="resume-btn" onclick="requestFullScreenAndResume()">이어서 하기</button>
+        </div>
         <div class="screen-transition" id="screenTransition">
             <video class="transition-video" id="transitionVideo" autoplay playsinline>
                 <source src="" type="video/mp4">
