--- a/index.html
+++ b/index.html
@@ -90,6 +90,18 @@
         </div>
     </div>
 
+    <!-- 미션 모달 추가 -->
+    <div class="mission-modal" id="missionModal">
+        <div class="mission-content">
+            <h2 id="missionTitle">🔮 첫 번째 시험 🔮</h2>
+            <p id="missionText"></p>
+            <button class="mission-start-btn" onclick="closeMissionModal()">시작하기</button>
+        </div>
+    </div>
+
+    <!-- 힌트 메시지 영역 추가 -->
+    <div class="hint-message" id="hintMessage"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
