--- a/index.html
+++ b/index.html
@@ -38,24 +38,24 @@
                 </div>
 
                 <div class="room room1 active" id="room1">
-                    <div class="clickable tree" onclick="openQuiz(1)"></div>
-                    <div class="clickable jar" onclick="openQuiz(2)"></div>
-                    <div class="clickable candle" onclick="openQuiz(3)"></div>
-                    <div class="clickable door1" onclick="openQuiz(4)"></div>
+                    <div class="clickable tree" data-quiz-id="1"></div>
+                    <div class="clickable jar" data-quiz-id="2"></div>
+                    <div class="clickable candle" data-quiz-id="3"></div>
+                    <div class="clickable door1" data-quiz-id="4"></div>
                 </div>
 
                 <div class="room room2" id="room2">
-                    <div class="clickable hourglass" onclick="openQuiz(5)"></div>
-                    <div class="clickable box" onclick="openQuiz(6)"></div>
-                    <div class="clickable mask" onclick="openQuiz(7)"></div>
-                    <div class="clickable door2" onclick="openQuiz(8)"></div>
+                    <div class="clickable hourglass" data-quiz-id="5"></div>
+                    <div class="clickable box" data-quiz-id="6"></div>
+                    <div class="clickable mask" data-quiz-id="7"></div>
+                    <div class="clickable door2" data-quiz-id="8"></div>
                 </div>
 
                 <div class="room room3" id="room3">
-                    <div class="clickable bible" onclick="openQuiz(9)"></div>
-                    <div class="clickable shield" onclick="openQuiz(10)"></div>
-                    <div class="clickable cross" onclick="openQuiz(11)"></div>
-                    <div class="clickable door3" onclick="openQuiz(12)"></div>
+                    <div class="clickable bible" data-quiz-id="9"></div>
+                    <div class="clickable shield" data-quiz-id="10"></div>
+                    <div class="clickable cross" data-quiz-id="11"></div>
+                    <div class="clickable door3" data-quiz-id="12"></div>
                 </div>
             </div>
             <button class="next-room-btn" id="nextRoomBtn" onclick="nextRoom()">다음 방으로</button>
