--- a/index.html
+++ b/index.html
@@ -89,7 +89,14 @@
             </div>
         </div>
     </div>
-
+    
+    <div class="modal" id="storyModal">
+        <div class="modal-content">
+            <h2 id="storyTitle"></h2>
+            <p id="storyText"></p>
+            <button class="challenge-btn" onclick="startChallenge()">탈출 도전</button>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
